--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,8 @@ dbt-spark==1.8.0
     # via -r requirements.in
 deepdiff==7.0.1
     # via dbt-common
+future==1.0.0
+    # via pyhive
 idna==3.8
     # via requests
 importlib-metadata==6.11.0
@@ -99,18 +101,25 @@ protobuf==4.25.4
     #   dbt-adapters
     #   dbt-common
     #   dbt-core
+pure-sasl==0.6.2
+    # via
+    #   pyhive
+    #   thrift-sasl
 py4j==0.10.9.7
     # via pyspark
 pydantic==2.8.2
     # via dbt-semantic-interfaces
 pydantic-core==2.20.1
     # via pydantic
+pyhive==0.7.0
+    # via dbt-spark
 pyspark==3.5.2
     # via -r requirements.in
 python-dateutil==2.9.0.post0
     # via
     #   dbt-common
     #   dbt-semantic-interfaces
+    #   pyhive
 python-slugify==8.0.4
     # via agate
 pytimeparse==1.1.8
@@ -141,6 +150,8 @@ six==1.16.0
     #   isodate
     #   minimal-snowplow-tracker
     #   python-dateutil
+    #   thrift
+    #   thrift-sasl
 sqlglot==25.18.0
     # via -r requirements.in
 sqlparams==6.1.0
@@ -149,6 +160,13 @@ sqlparse==0.5.1
     # via dbt-core
 text-unidecode==1.3
     # via python-slugify
+thrift==0.16.0
+    # via
+    #   dbt-spark
+    #   pyhive
+    #   thrift-sasl
+thrift-sasl==0.4.3
+    # via pyhive
 typing-extensions==4.12.2
     # via
     #   dbt-adapters
