--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
 
 on:
@@ -14,19 +11,31 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Set up Docker
+      uses: docker/setup-buildx-action@v1
+
+    - name: Start Docker service
+      run: sudo service docker start
+
+    - name: Verify Docker is running
+      run: docker info
+
     - name: Start Spark Cluster
       run: make spark-up
+
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+
     - name: Install dependencies
       run: |
         make uv && make venv
+
     - name: Test dbt
       run: dbt debug
