--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -33,10 +33,9 @@ jobs:
       with:
         python-version: "3.10"
 
-    - name: Install dependencies and activate virtual environment
+    - name: Install dependencies and create virtual environment
       run: |
         make uv && make venv
-        echo "source .venv/bin/activate" >> $GITHUB_ENV
 
     - name: Test dbt
       run: |
